--- a/obrigado.html
+++ b/obrigado.html
@@ -53,8 +53,8 @@
 </head>
 <body>
     <div class="container">
-        <h1>Obrigado!</h1>
-        <p>Sua ação foi concluída com sucesso.</p>
+        <h1>Pagamento em Processamento.</h1>
+        <p>Estamos processando seu pagamento e não é necessário efetuar nenhuma ação no momento</p>
     </div>
 </body>
 </html>
