--- a/obrigado.html
+++ b/obrigado.html
@@ -52,6 +52,9 @@
     </style>
 </head>
 <body>
+    <script>
+  fbq('track', 'InitiateCheckout');
+</script>
     <div class="container">
         <h1>Pagamento em Processamento.</h1>
         <p>Estamos processando seu pagamento e não é necessário efetuar nenhuma ação no momento</p>
