--- a/obrigado.html
+++ b/obrigado.html
@@ -52,8 +52,8 @@
     </style>
 </head>
 <body>
-    <script>
-  fbq('track', 'InitiateCheckout');
+<script>
+  fbq('track', 'Purchase');
 </script>
     <div class="container">
         <h1>Pagamento em Processamento.</h1>
